--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,24 @@ body {
 input:focus {
   outline: none;
 }
+
+/* Designing for scroll-bar */
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
