feat: 보안 취약점 업데이트 + 영어 지원

--- a/ai-web-front/components/camp1/Camp1Test.module.css
+++ b/ai-web-front/components/camp1/Camp1Test.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   display: flex;
   flex-direction: column;
+  padding: 0 14px;
   width: 100%;
   align-items: center;
   z-index: 5;
